Fix homepager background alignment

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -348,13 +348,15 @@ body.index {
 		background-position: 50% 50%;
 	}
 
-	@media screen and (min-width: 1024px) {
-		background-image: url('/images/home/foto-bg-destaque-art--1024w.jpg');
-		background-position: 100% 100%;
-	}
+	@media screen and (min-height: 768px) {
+		@media screen and (min-width: 1024px) {
+			background-image: url('/images/home/foto-bg-destaque-art--1024w.jpg');
+			background-position: 100% 100%;
+		}
 
-	@media screen and (min-width: 1280px) {
-		background-image: url('/images/home/foto-bg-destaque-art.jpg');
+		@media screen and (min-width: 1280px) {
+			background-image: url('/images/home/foto-bg-destaque-art.jpg');
+		}
 	}
 }
 
